# crm

./: .tokeignore  Cargo.toml  README.md  _typos.toml  cliff.toml  deny.toml  docker-compse.yaml
.github/workflows/: build.yml
crm/: Cargo.toml  build.rs  crm.yaml
crm-metadata/: Cargo.toml  build.rs  metadata.yaml
crm-metadata/src/: config.rs  lib.rs  main.rs
crm-metadata/src/abi/: mod.rs
crm-metadata/src/pb/: crm_metadata.rs  mod.rs
crm-metadata/tests/: service.rs
crm-send/: Cargo.toml
crm/src/: client.rs  config.rs  lib.rs  main.rs  server.rs
crm/src/abi/: auth.rs  crm.rs  mod.rs
crm/src/pb/: user_stats.rs
fixtures/: cert.pem  key.pem  rootCA.pem
notification/: Cargo.toml  build.rs  send.yaml
notification/src/: config.rs  lib.rs  main.rs
notification/src/abi/: mod.rs
notification/src/pb/: notification.rs
notification/tests/: service.rs
protos/: crm.proto
protos/crm/: messages.proto  rpc.proto
protos/crm_metadata/: messages.proto  rpc.proto
protos/notification/: messages.proto  rpc.proto
protos/user_stats/: messages.proto  rpc.proto
user-state/: .env  Cargo.toml  build.rs  user_stat.yaml
user-state/examples/: gen.rs
user-state/migrations/: 20241101140228_init.sql
user-state/src/: config.rs  lib.rs  main.rs
user-state/src/abi/: mod.rs
user-state/src/pb/: user_stats.rs
user-state/tests/: service.rs
volume/nginx/: nginx.conf
