[package]
name = "user-state"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
rand = {workspace = true}
nanoid = "0.4.0"
duckdb = { version = "1.1.1", features = ["bundled", "chrono", "serde_json"] }
serde_json = "1.0.132"

[build-dependencies]
prost-build = { workspace = true }
anyhow = { workspace = true }
tonic-build = { workspace = true }

[dev-dependencies]
fake = { version = "3.0.0", features = ["derive", "chrono"] }
