[package]
name = "user-state"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
nanoid = "0.4.0"
duckdb = { version = "1.1.1", features = ["bundled", "chrono", "serde_json"] }
serde_json = { workspace = true }
futures = { workspace = true }
derive = { workspace = true }
derive_builder = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dashmap = "6.1.0"

[build-dependencies]
anyhow = { workspace = true }
tonic-build = { workspace = true }
proto-builder-trait = "0.6.2"

[dev-dependencies]
fake = { version = "3.0.0", features = ["derive", "chrono"] }
